# HelloOpengl

./: .gitignore  HelloOpengl.sln
HelloOpengl/: CMakeLists.txt  HelloOpengl.vcxproj  HelloOpengl.vcxproj.filters  glad.c  main.cpp  shader.cpp  shader.h  shaderSource.cpp  shaderSource.h  texture.cpp  texture.h  window.cpp  window.h
HelloOpengl/include/glad/: glad.h
HelloOpengl/shaders/: frag.txt  vert.txt
HelloOpengl/usr/include/glad/: glad.h
HelloOpengl/usr/lib/: glfw3.lib
